# plasmic-img-optimizer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  wrangler.toml
.github/workflows/: ci-cd.yml
src/: cache.rs  error.rs  image_processor.rs  lib.rs  main.rs  worker.rs
tests/: integration_tests.rs
