[package]
name = "img-optimizer"
version = "1.0.0"
edition = "2021"

[features]
default = ["native"]
native = []
worker = ["dep:worker", "dep:wasm-bindgen", "dep:getrandom"]

[dependencies]
actix-web = "4"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
webp = "0.3"
reqwest = { version = "0.12", features = ["stream"] }
url = "2"
sha2 = "0.10"
hex = "0.4"
bytes = "1"
futures-util = "0.3"
env_logger = "0.11"
log = "0.4"
anyhow = "1"
thiserror = "1"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"

# Cloudflare Workers dependencies
worker = { version = "0.6", optional = true }
wasm-bindgen = { version = "0.2.92", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }
regex = "1"
once_cell = "1"

[dev-dependencies]
actix-rt = "2"
tempfile = "3"
wiremock = "0.6"
urlencoding = "2"
base64 = "0.22"

[[bin]]
name = "img-optimizer"
path = "src/main.rs"
required-features = ["native"]

[lib]
name = "img_optimizer"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.wasm]
inherits = "release"
opt-level = "s"
lto = "fat"