[package]
name = "img-optimizer"
version = "1.0.0"
edition = "2021"

[features]
default = ["native"]
native = ["dep:actix-web", "dep:actix-cors", "dep:tokio", "dep:image", "dep:webp", "dep:reqwest", "dep:futures-util", "dep:env_logger"]
worker = ["dep:worker", "dep:wasm-bindgen", "dep:getrandom"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
sha2 = "0.10"
hex = "0.4"
bytes = "1"
log = "0.4"
anyhow = "1"
thiserror = "1"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
regex = "1"
once_cell = "1"

# Native dependencies (not available in WASM)
actix-web = { version = "4", optional = true }
actix-cors = { version = "0.7", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
image = { version = "0.25", optional = true }
webp = { version = "0.3", optional = true }
reqwest = { version = "0.12", features = ["stream"], optional = true }
futures-util = { version = "0.3", optional = true }
env_logger = { version = "0.11", optional = true }

# Cloudflare Workers dependencies
worker = { version = "0.6", optional = true }
wasm-bindgen = { version = "0.2.92", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }

[dev-dependencies]
actix-rt = "2"
tempfile = "3"
wiremock = "0.6"
urlencoding = "2"
base64 = "0.22"

[[bin]]
name = "img-optimizer"
path = "src/main.rs"
required-features = ["native"]

[lib]
name = "img_optimizer"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.wasm]
inherits = "release"
opt-level = "s"
lto = "fat"