[package]
name = "img-optimizer"
version = "1.0.0"
edition = "2021"

[features]
default = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
sha2 = "0.10"
hex = "0.4"
bytes = "1"
log = "0.4"
anyhow = "1"
thiserror = "1"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
regex = "1"
once_cell = "1"

# Dependencies
actix-web = { version = "4" }
actix-cors = { version = "0.7" }
tokio = { version = "1", features = ["full"] }
image = { version = "0.25" }
webp = { version = "0.3" }
reqwest = { version = "0.12", features = ["stream"] }
futures-util = { version = "0.3" }
env_logger = { version = "0.11" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
actix-rt = "2"
tempfile = "3"
wiremock = "0.6"
urlencoding = "2"
base64 = "0.22"

[[bin]]
name = "img-optimizer"
path = "src/main.rs"

[lib]
name = "img_optimizer"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3